[gd_scene load_steps=6 format=2]

[ext_resource path="res://environment/Television.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/goblin1.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/tvset.png" type="Texture" id=3]

[sub_resource type="SphereShape" id=4]
radius = 8.0

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.3, 0.65, 0.1 )

[node name="TV" type="StaticBody"]
script = ExtResource( 1 )

[node name="whatsOnTV" type="Sprite3D" parent="."]
transform = Transform( 1, -0.000846017, -0.000247139, 0.000846071, 1, 0.000216373, 0.000246953, -0.000216585, 1, 0, 1.03, -0.5 )
pixel_size = 0.005
texture = ExtResource( 2 )

[node name="blankTVSprite" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
pixel_size = 0.031
texture = ExtResource( 3 )

[node name="shrinkGrowTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="DetectionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
shape = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0 )
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
